--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -3,23 +3,27 @@ import { Icon } from "astro-icon/components";
 import I18nKey from "../i18n/i18nKey";
 import { i18n } from "../i18n/translation";
 import { formatDateToYYYYMMDD } from "../utils/date-utils";
-import { getCategoryUrl, getTagUrl } from "../utils/url-utils";
+import { getCategoryUrl, getTagUrl, getSkillUrl } from "../utils/url-utils";
 
 interface Props {
 	class: string;
 	published: Date;
 	updated?: Date;
 	tags: string[];
+    skills: string[];
 	category: string | null;
 	hideTagsForMobile?: boolean;
+    hideSkillsForMobile?: boolean;
 	hideUpdateDate?: boolean;
 }
 const {
 	published,
 	updated,
 	tags,
+    skills,
 	category,
 	hideTagsForMobile = false,
+    hideSkillsForMobile = false,
 	hideUpdateDate = false,
 } = Astro.props;
 const className = Astro.props.class;
@@ -77,6 +81,25 @@ const className = Astro.props.class;
                 </a>
             ))}
             {!(tags && tags.length > 0) && <div class="transition text-50 text-sm font-medium">{i18n(I18nKey.noTags)}</div>}
+        </div>
+    </div>
+
+    <!-- skills -->
+    <div class:list={["items-center", {"flex": !hideSkillsForMobile, "hidden md:flex": hideSkillsForMobile}]}>
+        <div class="meta-icon"
+        >
+            <Icon name="material-symbols:tag-rounded" class="text-xl"></Icon>
+        </div>
+        <div class="flex flex-row flex-nowrap items-center">
+            {(skills && skills.length > 0) && skills.map((skill, i) => (
+                <div class:list={[{"hidden": i == 0}, "mx-1.5 text-[var(--meta-divider)] text-sm"]}>/</div>
+                <a href={getSkillUrl(skill)} aria-label={`View all posts with the ${skill.trim()} skill`}
+                   class="link-lg transition text-50 text-sm font-medium
+                                hover:text-[var(--primary)] dark:hover:text-[var(--primary)] whitespace-nowrap">
+                    {skill.trim()}
+                </a>
+            ))}
+            {!(skills && skills.length > 0) && <div class="transition text-50 text-sm font-medium">{i18n(I18nKey.noSkills)}</div>}
         </div>
     </div>
 </div>
