--- a/src/components/PostPage.astro
+++ b/src/components/PostPage.astro
@@ -14,6 +14,7 @@ const interval = 50;
                 entry={entry}
                 title={entry.data.title}
                 tags={entry.data.tags}
+                skills={entry.data.skills}
                 category={entry.data.category}
                 published={entry.data.published}
                 updated={entry.data.updated}
