--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -66,7 +66,7 @@ const className = Astro.props.class;
     </div>
 
     <!-- tags -->
-    <div class:list={["items-center", {"flex": !hideTagsForMobile, "hidden md:flex": hideTagsForMobile}]}>
+    <!-- <div class:list={["items-center", {"flex": !hideTagsForMobile, "hidden md:flex": hideTagsForMobile}]}>
         <div class="meta-icon"
         >
             <Icon name="material-symbols:tag-rounded" class="text-xl"></Icon>
@@ -82,10 +82,10 @@ const className = Astro.props.class;
             ))}
             {!(tags && tags.length > 0) && <div class="transition text-50 text-sm font-medium">{i18n(I18nKey.noTags)}</div>}
         </div>
-    </div>
+    </div> -->
 
     <!-- skills -->
-    <div class:list={["items-center", {"flex": !hideSkillsForMobile, "hidden md:flex": hideSkillsForMobile}]}>
+    <!-- <div class:list={["items-center", {"flex": !hideSkillsForMobile, "hidden md:flex": hideSkillsForMobile}]}>
         <div class="meta-icon"
         >
             <Icon name="material-symbols:tag-rounded" class="text-xl"></Icon>
@@ -101,5 +101,5 @@ const className = Astro.props.class;
             ))}
             {!(skills && skills.length > 0) && <div class="transition text-50 text-sm font-medium">{i18n(I18nKey.noSkills)}</div>}
         </div>
-    </div>
+    </div> -->
 </div>
