--- a/src/components/widget/Tags.astro
+++ b/src/components/widget/Tags.astro
@@ -11,7 +11,8 @@ const tags = await getTagList();
 
 const COLLAPSED_HEIGHT = "7.5rem";
 
-const isCollapsed = tags.length >= 20;
+// max number of tags displayed
+const isCollapsed = tags.length >= 30;
 
 interface Props {
 	class?: string;
@@ -24,7 +25,8 @@ const style = Astro.props.style;
     <div class="flex gap-2 flex-wrap">
         {tags.map(t => (
             <ButtonTag href={getTagUrl(t.name)} label={`View all posts with the ${t.name.trim()} tag`}>
-                {t.name.trim()}
+                {/* {t.name.trim()} */}
+                {"[" + t.count + "] " + t.name.trim()}
             </ButtonTag>
         ))}
     </div>
